--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.18.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oceanlatte/note-taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oceanlatte/note-taker/issues"
+  },
+  "homepage": "https://github.com/oceanlatte/note-taker#readme"
 }
